<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBackground"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.mjbaucas.indecision.CreateListActivity">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="3dp"
        android:id="@+id/title_entry">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/list_name"
            android:backgroundTint="@color/darkBackground"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:inputType="text"/>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingTop="10dp"
        android:text="@string/entries" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/entry_scroll"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/entry_layout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_container"
        android:layout_below="@+id/entry_layout">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/entry_buttons">

            <Button
                android:id="@+id/add_entry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/darkBackground"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_entry"/>

            <Button
                android:id="@+id/remove_entry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/darkBackground"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/remove_entry"/>
        </LinearLayout>

        <Button
            android:id="@+id/add_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkBackground"
            android:textColor="@color/white"
            android:text="@string/add_list"
            android:layout_below="@+id/entry_buttons"/>
    </RelativeLayout>


</LinearLayout>
